--- a/exercicio3/styles/style.css
+++ b/exercicio3/styles/style.css
@@ -36,11 +36,13 @@ main {
 
 main #form{
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     justify-content: center;
     align-items:flex-start;
-    padding-left: 20px ;
-    height: 20vh;
+    padding: 20px ;
+    min-height: 20vh;
+    width: 40vw;
+    margin: auto;
     background-color: rgba(252, 36, 36, 0.267);
     border-radius: 15px;
     box-shadow: 2px 1px 2px 1px rgba(0, 0, 0, 0.384);
@@ -70,6 +72,7 @@ main #date {
     text-align: center;
     font-weight: 700;
     height: 25px;
+    width: 20vw;
 }
 
 main #coferir, #clean {
@@ -81,6 +84,7 @@ main #coferir, #clean {
     font-weight: 700;
     border: none;
     cursor: pointer;
+    margin-bottom: 10px;
     
 }
 
