--- a/exercicio4/styles/style.css
+++ b/exercicio4/styles/style.css
@@ -6,13 +6,10 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-html, body {
-    height: 100vh;
-  
-}
 
 
 body{
+    height: 100%;
     background-color: rgba(253, 148, 110, 0.795);
 }
 
@@ -29,7 +26,7 @@ header {
 }
 
 main {
-    height: 85vh;
+    height: 100%;
     background-color: rgba(253, 148, 110, 0.795);
     padding: 20px;
 }
