--- a/pratica02/styles/style.css
+++ b/pratica02/styles/style.css
@@ -24,7 +24,7 @@ header {
     text-align: center;
     font-family: 'Teko', sans-serif;
     font-size: 1.9em;
-    padding-top:5px;
+    padding:5px 0 0 5px;
     
 }
 
