--- a/Revisão/rev001/styles/style.css
+++ b/Revisão/rev001/styles/style.css
@@ -30,6 +30,16 @@ main h2 {
 i#voltcont, i#volttab{
     font-size: 1.2em;
     color: rgb(28, 180, 180);
+    background-color: rgba(250, 235, 215, 0.616);
+    border: 1px solid;
+    padding: 2px;
+    border-radius: 5px;
+    
+}
+
+i#voltcont:hover, i#volttab:hover{
+    
+    transform: translateY(-3px);
     
 }
 
